--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,6 +58,15 @@ section {
         position: relative;
         //kinda cringe ngl, gonna have to make this better
         text-align: center;
+        .intro-wrapper{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            padding: 2rem;
+            box-sizing: border-box;
+            position: relative;
+        }
         .intro-content{
             position: relative;
             .profile-pic{
@@ -73,6 +82,7 @@ section {
         .icons{
             position: relative;
             display: flex;
+            flex-wrap: wrap;
             justify-content: center;
             gap: 1.25rem;
             a{
